--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
+  },
+  "scripts": {
+    "build": "npm install",
+    "start": "node server.js"
   }
 }
